# workspace = { members = ["examples/helloworld"] }
[package]
name = "axum_jwt_ware"
version = "0.1.8"
edition = "2021"
authors = ["Eze <mailstoeze@gmail.com>"]
description = "Axum Authentication Library"
readme = "readme.md"
repository = "https://github.com/ezesundayeze/axum_jwt_ware/"
license = "MIT OR Apache-2.0"
keywords = ["auth", "jwt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = { version = "9", default-features = false }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tower = "0.4.13"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }


[dev-dependencies]
axum = "0.7.1"
tokio = { version = "1", features = ["full"] }


[lib]
name = "axum_jwt_ware"
path = "src/lib.rs"
